<resources>
    <string name="strTxt_Usr">Usuario</string>
    <string name="strTxt_Pass">Contraseña</string>
    <string name="strTv_reloj">7:26:45</string>
    <string name="strBtn_Ingresar">Ingresar</string>
    <string name="strItemHorarios_Admin">Definir Horarios</string>
    <string name="strSubmMenu_Admin">Opciones Admin</string>
    <string name="strSubMenuAdmin_Menu">Menu</string>
    <string name="strCrearMenu">Crear</string>
    <string name="strModificarMenu">Modificar</string>
    <string name="strEliminarMenu">Eliminar</string>
    <string name="strSubMenuAdmin_SubMenu">Sub Menu</string>
    <string name="strItemCrearSubMenu">Crear</string>
    <string name="strItemModificarSubMenu">Modificar</string>
    <string name="strItemEliminarSubMenu">Eliminar</string>
    <string name="strSubMenuAdmin_Permiso">Permiso</string>
    <string name="strItemCrearPermiso">Crear</string>
    <string name="strItemModificarPermiso">Modificar</string>
    <string name="strItemEliminarPermiso">Eliminar</string>
    <string name="strSubMenuAdmin_Grupo">Grupo</string>
    <string name="strItemAsociarPermisosGrupo">Asociar permisos a grupo</string>
    <string name="strItemCrearGrupo">Crear</string>
    <string name="strItemModificarGrupo">Modificar</string>
    <string name="strItemEliminarGrupo">Eliminar</string>
    <string name="strSubMenuAdmin_Mostrar">Mostar</string>
    <string name="strItemMostrarListaListero">Mostrar lista segun listero</string>
    <string name="strItemMostrarTarifaPago">Tarifa de pago</string>
    <string name="strItemMostrarTiro">Tiro</string>
    <string name="strSubMenuRegistrar">Registrar</string>
    <string name="strItemRegistrarTiro">Tiro</string>
    <string name="strItemRegistrarTarifaPago">Tarifa de pago</string>
    <string name="strItemRegistrarTopeJugadaParlet">Tope jugada o parlets</string>
    <string name="strSubMenuUsuario">Usuario</string>
    <string name="strItemUsuarioBloq">Bloquear usuario</string>
    <string name="strItemUsuarioDesbloq">Desbloquear usuario</string>
    <string name="strItemUsuarioModificar">Modificar usuario</string>
    <string name="strItemUsuarioRegistrar">Registrar usuario</string>
    <string name="strItemUsuarioEliminar">Eliminar usuario</string>
    <string name="strItemUsuarioJugadaSimple">Jugada simple</string>
    <string name="strItemUsuarioJugarCentena">Jugar centena</string>
    <string name="strItemUsuarioJugarDecena">Jugar decena</string>
    <string name="strItemUsuarioJugarTerminal">Jugar terminal</string>
    <string name="strItemUsuarioJugarParlet">Jugar parlet</string>
    <string name="strItemUsuarioJugarCandado">Jugar candado</string>
    <string name="strItemUsuarioJugarMultiple">Jugar multiple</string>
    <string name="strItemListeroMostrar">Mostrar</string>
    <string name="strItemListerosRegistrar">Registrar</string>
    <string name="strItemUsuarioMisListas">Mis Listas</string>
    <string name="strItemUsuarioMisBotes">Mis Botes</string>
    <string name="strListParlets">Lista de parlets</string>
    <string name="strListF_C_C">Lista de corrido, fijo y centena</string>
    <string name="strListV_Lista">En Lista</string>
    <string name="strListV_Bote">En Bote</string>
    <string name="strTotal_Fijo">Total de fijo</string>
    <string name="strTotal_Corrido">Total de Corrido</string>
    <string name="strTotal_Centena">Total de Centena</string>
    <string name="strTotal_Parlets">Total de Parlets</string>
    <string name="strTotal_Limpio">Limpo</string>
    <string name="strHoraDia">Hora Mañana</string>
    <string name="strHoraTarde">Hora Tarde</string>
    <string name="strSubMenu_Listero">Opciones Listeros</string>
    <string name="strSubItemListero_GralTiro">Generar Tiro</string>
    <string name="strSubItemListero_ShowClose">Ver Cierre</string>
    <string name="strBtn_CrearMenu">Crear</string>
    <string name="strEdiTxt_CrearMenu">Nombre Menu</string>
    <string name="strBtn_CrearPermiso">Crear</string>
    <string name="strEdiTxt_CrearPermiso">Nombre Permiso</string>
    <string name="strBtn_CrearGrupo">Crear</string>
    <string name="strEdiTxt_CrearGrupo">Nombre Grupo</string>
    <string name="strEdiTxt_TarifaPago_Fecha">Fecha</string>
    <string name="strEdiTxt_TarifaPago_Hora">Hora</string>
    <string name="strEdiTxt_TarifaPago_ValorPagarLista">% a pagar lista</string>
    <string name="strEdiTxt_TarifaPago_ValorPagarBote">% a pagar bote</string>
    <string name="strBtn_TarifaPago_Registrar">Registrar</string>
    <string name="strImgBtn_AddTipoJugada">Agreagar tipo de jugada</string>
    <string name="strEditTxt_SubMenu_NombreSubMenu">Nombre SubMenu</string>
    <string name="strBtn_SubMenu_Crear">Crear</string>
    <string name="strBtn_SubMenu_AgregarPermiso">Agregar Permiso</string>
    <string name="strBtn_SubMenu_AgregarMenu">Agregar Menu</string>
    <string name="strBtn_Grupo_Asociar_Agregar">Agregar Grupo</string>
    <string name="strBtn_Grupo_AgregarPermiso">Agregar</string>
    <string name="strEdiTxt_RegistroTiro_Centena">Centena</string>
    <string name="strEdiTxt_RegistroTiro_Fijo">Fijo</string>
    <string name="strEdiTxt_RegistroTiro_Corrido">Corrido</string>
    <string name="strBtn_RegistroTiro_Registrar">Registrar</string>
    <string name="strEditText_RegistroTiro_Fecha">Fecha</string>
    <string name="strEditText_RegistroTiro_Hora">Hora</string>
    <string name="strRadio_Admin_MostrarTiro_Pagina">Buscar en la Web</string>
    <string name="strRadio_Admin_MostrarTiro_App">Buscar en la App</string>
    <string name="strImagBtn_Admin_MostrarTiro_Buscar">Buscar</string>
    <string name="strBtn_AgregarTiro_Actualizar">Actualizar</string>
    <string name="strBtn_AgregarTiro_Buscar">Buscar</string>
    <string name="strBtn_AgregarTiro_Registrar">Registrar</string>
    <string name="strBtn_AgregarTiro_Eliminar">Eliminar</string>
    <string name="strEdiTxt_AgregarTiro_InsertNivel">Inserte Grupo</string>
    <string name="strEdiTxt_AgregarTiro_modificarGrupo">Inserte nuevo valor</string>
    <string name="str_btn_jugadasimple_fijocorrido_0">0</string>
    <string name="str_btn_jugadasimple_fijocorrido_1">1</string>
    <string name="str_btn_jugadasimple_fijocorrido_2">2</string>
    <string name="str_btn_jugadasimple_fijocorrido_3">3</string>
    <string name="str_btn_jugadasimple_fijocorrido_4">4</string>
    <string name="str_btn_jugadasimple_fijocorrido_5">5</string>
    <string name="str_btn_jugadasimple_fijocorrido_6">6</string>
    <string name="str_btn_jugadasimple_fijocorrido_7">7</string>
    <string name="str_btn_jugadasimple_fijocorrido_8">8</string>
    <string name="str_btn_jugadasimple_fijocorrido_9">9</string>
    <string name="str_btn_jugadasimple_fijocorrido_pto">.</string>
    <string name="str_btn_jugadasimple_fijocorrido_atras"></string>
    <string name="str_btn_jugadasimple_fijocorrido_guardar">Guardar</string>
    <string name="str_btn_jugadasimple_fijocorrido_num">Numero</string>
    <string name="str_btn_jugadasimple_fijocorrido_corr">Corrido</string>
    <string name="str_btn_jugadasimple_fijocorrido_fijo">Fijo</string>
    <string name="strTotal">Total : </string>
    <string name="strPorCientoLista">% Lista : </string>
    <string name="strPorCientoBote">% Bote : </string>
    <string name="strMiPorcient">Mi % : </string>
    <string name="strAgregar">Agregar</string>
    <string name="strEliminar">Eliminar</string>
    <string name="str_global_spn_listeros">Seleccionar listero</string>
    <string name="str_global_btn_guardar">Guardar Jugada</string>
    <string name="str_global_contentDescription">descripcion</string>
    <string name="str_global_total">$100000.00</string>
    <string name="str_global_corr">Corrido</string>
    <string name="str_global_fijo">Fijo</string>
    <string name="str_global_tv_apuesta">Apuesta</string>
    <string name="str_btn_0">0</string>
    <string name="str_btn_1">1</string>
    <string name="str_btn_2">2</string>
    <string name="str_btn_3">3</string>
    <string name="str_btn_4">4</string>
    <string name="str_btn_5">5</string>
    <string name="str_btn_6">6</string>
    <string name="str_btn_7">7</string>
    <string name="str_btn_8">8</string>
    <string name="str_btn_9">9</string>
    <string name="str_btn_pto">.</string>
    <string name="str_et_hora">Sel. hora</string>
    <string name="str_et_fijo">Fijo</string>
    <string name="str_et_corrido">Corrido</string>
    <string name="str_et_centena">Centena</string>
    <string name="str_et_parlet">Parlet</string>
    <string name="str_et_fecha">Selec. fecha</string>
    <string name="str_tv_decena_num1">Decena</string>
    <string name="str_tv_decena_h1">Jugar Decena</string>
    <string name="str_tv_decena_h2">Ej: Decena 2 es 20, 21, 22, \.\.\., 29</string>
    <string name="str_tv_centena_num1">Numero 1</string>
    <string name="str_tv_centena_h1">Jugar Centena</string>
    <string name="str_tv_centena_h2">Ejemplo: 825</string>
    <string name="str_tv_terminal_num1">Terminal</string>
    <string name="str_tv_terminal_h1">Jugar Terminal</string>
    <string name="str_tv_terminal_h2">Ej: Terminal 3 es 13, 23, 33, \.\.\., 93</string>
    <string name="app_name">Administrar Juego</string>
    <string name="str_btn_guardar">Guardar Jugada</string>
    <string name="str_contentDescription">descripcion</string>
    <string name="str_btn_jugadasimple_0">0</string>
    <string name="str_btn_jugadasimple_1">1</string>
    <string name="str_btn_jugadasimple_2">2</string>
    <string name="str_btn_jugadasimple_3">3</string>
    <string name="str_btn_jugadasimple_4">4</string>
    <string name="str_btn_jugadasimple_5">5</string>
    <string name="str_btn_jugadasimple_6">6</string>
    <string name="str_btn_jugadasimple_7">7</string>
    <string name="str_btn_jugadasimple_8">8</string>
    <string name="str_btn_jugadasimple_9">9</string>
    <string name="str_btn_jugadasimple_pto">.</string>
    <string name="str_btn_jugadasimple_atras"></string>
    <string name="str_tv_jugadasimple_num">Numero</string>
    <string name="str_tv_jugadasimple_corr">Corrido</string>
    <string name="str_tv_jugadasimple_fijo">Fijo</string>
    <string name="str_tv_jugadasimple_h1">Jugar Número</string>
    <string name="str_tv_jugadasimple_h2">Hacer jugada simple fijo corrido</string>
    <string name="str_tv_parlet_num1">Numero 1</string>
    <string name="str_tv_parlet_num2">Numero 2</string>
    <string name="str_tv_parlet_apuesta">Apuesta</string>
    <string name="str_tv_parlet_h1">Jugar Parlet</string>
    <string name="str_tv_parlet_h2">Hacer jugada Num1, Num2 y Apuesta</string>
    <string name="str_tv_candadoparlet_h1">Jugar Candado Parlet</string>
    <string name="str_tv_multiplesJugadas_h1">Jugadas Multiples</string>
    <string name="str_tv_multiplesJugadas_h2">Candado</string>
    <string name="strLista">Lista</string>
    <string name="strBote">Bote</string>
    <string name="strUsr">Nombre Usuario</string>
    <string name="strPass">Contraseña</string>
    <string name="strRPass">Repetir Contraseña</string>
    <string name="strBloquerUsr">Bloquear Usr</string>
    <string name="strDesBloquerUsr">Desbloquear Usr</string>
    <string name="strTvTest"></string>
</resources>