<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".insertarTerminal"
    android:background="#202732"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:text="@string/str_tv_terminal_h1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/str_tv_terminal_h2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="192dp"
        android:layout_height="432dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:splitMotionEvents="false">

            <TextView
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/str_tv_terminal_num1"
                android:textColor="@color/white"
                android:textAlignment="center" />

            <!---
            &lt;!&ndash;android:textColor="@color/white"&ndash;&gt;
            &lt;!&ndash;android:text="@string/str_tv_centena_num2"&ndash;&gt;-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/str_global_fijo"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_global_corr"
                android:textColor="@color/white"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginBottom="20dp">


            <TextView
                android:id="@+id/id_tv_insertarterminal_terminal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/edit_mostrar_rounded"
                android:elegantTextHeight="true"
                android:gravity="center_vertical"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_tv_insertarterminal_fijo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/edit_mostrar_rounded"
                android:elegantTextHeight="true"
                android:gravity="center_vertical"
                android:maxLength="5"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_tv_insertarterminal_corrido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edit_mostrar_rounded"
                android:elegantTextHeight="true"
                android:gravity="center_vertical"
                android:maxLength="5"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/id_btn_insertarterminal_7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="75sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/str_btn_7"
                android:textSize="24sp"
                android:background="@drawable/edit_text_raunded"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />


            <Button
                android:id="@+id/id_btn_insertarterminal_8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="75sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/str_btn_8"
                android:textSize="24sp"
                android:textColor="@color/white"
                 android:background="@drawable/edit_text_raunded"
                tools:ignore="TouchTargetSizeCheck" />


            <Button
                android:id="@+id/id_btn_insertarterminal_9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="75sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_btn_9"
                android:textSize="24sp"
                android:background="@drawable/edit_text_raunded"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/id_btn_insertarterminal_4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/str_btn_4"
                android:textColor="@color/white"
                android:background="@drawable/edit_text_raunded"
                android:textSize="24sp" />


            <Button
                android:id="@+id/id_btn_insertarterminal_5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/str_btn_5"
                android:background="@drawable/edit_text_raunded"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/id_btn_insertarterminal_6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_btn_6"
                android:background="@drawable/edit_text_raunded"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/id_btn_insertarterminal_1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/str_btn_1"
                android:textColor="@color/white"
                android:background="@drawable/edit_text_raunded"
                android:textSize="24sp" />


            <Button
                android:id="@+id/id_btn_insertarterminal_2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/str_btn_2"
                android:textColor="@color/white"
                android:background="@drawable/edit_text_raunded"
                android:textSize="24sp" />

            <Button
                android:id="@+id/id_btn_insertarterminal_3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_btn_3"
                android:background="@drawable/edit_text_raunded"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">


            <Button
                android:id="@+id/id_btn_insertarterminal_pto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/str_btn_pto"
                android:textColor="@color/white"
                android:background="@drawable/edit_text_raunded"
                android:textSize="30sp" />

            <Button
                android:id="@+id/id_btn_insertarterminal_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2.5dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/str_btn_0"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:background="@drawable/edit_text_raunded"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/id_btn_insertarterminal_borrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/str_global_contentDescription"
                app:srcCompat="@android:drawable/ic_input_delete"
                android:background="@drawable/edit_text_raunded"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/id_btn_insertarterminal_guardar"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:layout_weight="1"
                android:drawableStart="@android:drawable/ic_menu_save"
                android:text="@string/str_global_btn_guardar"
                android:textColor="#DFDADA"
                android:textSize="17sp"
                android:background="@drawable/button_rounded"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

        </TableRow>


    </TableLayout>

</android.support.constraint.ConstraintLayout>